Update swagger, connect microservices using HTTP protocol
